--- a/templates/home.html
+++ b/templates/home.html
@@ -110,6 +110,7 @@
         }
 
         .btn:hover {
+            text-decoration: none;
             background-color: #ddbb10;
         }
     </style>
